# qust

./: .gitignore  Cargo.toml  README.md  test.py
doc/: FEATURE_NOTES.md
doc/docs/: ARCHITECTURE_REFACTOR.md  index.html
doc/docs/operators/: index.html
doc/docs/operators/alpha/: __call__.html
doc/docs/operators/batch_stock/: bt_intraday.html
doc/docs/operators/batch_ta/: head.html  lead.html
doc/docs/operators/bt/: index.html  price.html
doc/docs/operators/col/: __call__.html  all.html  first.html  index.html  lit.html  null.html
doc/docs/operators/dataframe/: plot.html  register_plugin.html  snapshot.html  with_cols.html
doc/docs/operators/dt/: hour.html  index.html  minute.html  month.html  second.html  time.html
doc/docs/operators/dtype/: decimal128.html  decimal32.html  dictionary.html  duration.html  fixed_size_list.html  index.html  large_list.html  large_list_view.html  run_end_encoded.html  struct.html  time32.html  union.html
doc/docs/operators/expr/: abs.html  alias.html  arg_max_n.html  arg_min.html  arg_min_n.html  cbrt.html  clip.html  corr.html  count.html  dt.html  eq_missing.html  filter.html  filter_cb.html  first_value.html  floor.html  index.html  is_finite.html  is_nan.html  is_not_null.html  is_null.html  kurtosis.html  logical_and.html  max.html  mean.html  min.html  min_n.html  ne_missing.html  perf.html  pl.html  projection_name.html  rolling.html  rolling_dynamic.html  rolling_intra_day.html  round.html  save.html  save_data.html  save_data_inner.html  select.html  shift.html  sign.html  (+5 more)
doc/docs/operators/fp/: bt.html  group_pnl.html  index.html
doc/docs/operators/kline/: ha.html  index.html  rl1m.html  rl30m.html
doc/docs/operators/math/: asin.html  atan.html  cosh.html  index.html  log10.html  sqrt.html  tan.html  tanh.html
doc/docs/operators/monitor/: scatter.html  step_line.html  table.html  violin.html
doc/docs/operators/operator/: add.html  and.html  floordiv.html  ge.html  gt.html  index.html  invert.html  mod.html  mul.html  ne.html  neg.html  or.html  pow.html  radd.html  rand.html  rfloordiv.html  rmod.html  ror.html  rpow.html  rtruediv.html  rxor.html  sub.html
doc/docs/operators/params/: alias.html  as_expr.html  as_list_expr.html  div_by.html  get_f64.html  get_string.html  index.html  step.html  to.html
doc/docs/operators/plugin/: get_dataframe.html  index.html
doc/docs/operators/stock/: ols.html  residual.html
doc/docs/operators/stra/: atr_break_expr.html  c66.html  exit_by_close_drawdown.html  exit_by_pct.html  exit_by_psar_af.html  (+12 more)
doc/docs/tools/: build_reference.py
examples/: all_res.parquet  demo.ipynb  share.ipynb  stra_assets.py
examples/data/Rl5m/: SA
examples/docs/: README.md  df.html  index.html  install.html  polars.html  quickstart.html  qust.html  qust_portfolio.html  search.js  wasm.html
examples/docs/assets/: app.js  styles.css
examples/docs/operators/: index.html
examples/docs/qust/: qust_core.html
examples/docs/qust_portfolio/: constraints.html  index.html  max_sharpe.html  mean_variance.html  min_variance.html  rebalance.html  risk_parity.html
examples/git_test/: evcxr.toml  git_test.ipynb
examples/wasm/: index.html  monitor.js
examples/wasm/app/: code_examples.toml  monitor-callback-runtime.js  monitor-session-runtime.js  monitor-slot-query-runtime.js  pyodide-runtime.js  wasm-eval-core.js  wasm-eval-worker.js  wasm-eval.js  workbench-runtime.js
examples/wasm/pyodide/: micropip-0.11.0-py3-none-any.whl
examples/wasm/wheels/: manifest.json
jh-test/: Cargo.toml
jh-test/src/: di.rs  lib.rs  online.rs
qust/: Cargo.toml  README.md
qust-api/: Cargo.toml
qust-api/src/: lib.rs  main.rs
qust-api/src/ctp/: api.rs  config.rs  ctp_wrapper.rs  mod.rs  time_manager.rs  type_bridge.rs  utiles.rs
qust-api/src/thx/: market.rs  mod.rs
qust-derive/: Cargo.toml
qust-derive/src/: lib.rs
qust-ds/: Cargo.toml
qust-ds/src/: aa.rs  df.rs  func.rs  lib.rs  log.rs  logger.rs  roll.rs  save.rs  types.rs  utils.rs
qust-io/: Cargo.toml
qust-io/src/: lib.rs
qust-io/src/input/: read_csv.rs  ticks.rs
qust-io/src/output/: array.rs  color.rs  excel.rs  main.rs  plot.rs  plotly.rs  profile.rs  show.rs
qust-io/src/transform/: pl_util.rs
qust-stra/: Cargo.toml
qust-stra/src/: lib.rs  main.rs  two_ma.rs
qust/src/: lib.rs
qust/src/.ipynb_checkpoints/: cond-checkpoint.rs  ofac-checkpoint.rs  plot-checkpoint.rs
qust/src/idct/: calc.rs  dcon.rs  fore.rs  macros.rs  part.rs  pms.rs  ta.rs
qust/src/live/: algo.rs  bt.rs  bt_kline.rs  bt_tick.rs  cond2.rs  cond_ops.rs  live_ops.rs  live_run.rs  match_ops.rs  order_types.rs  thread_manger.rs
qust/src/live/cross/: api.rs  cond.rs  mod.rs  update_sync.rs
qust/src/live/trend/: api.rs  bt_kline.rs  bt_tick.rs  cond.rs  live.rs  mod.rs
qust/src/port/: bgt.rs
qust/src/sig/: bt.rs  cond.rs  distra.rs  livesig.rs  oei.rs  ofac.rs  pnl.rs  posi.rs
qust/src/trade/: di.rs  idx.rs  inter.rs  ticker.rs  version.rs
site/: index.html  site.js  styles.css
src/: lib.rs
stra/: Cargo.toml
stra/code/: code.txt  save.txt
stra/data/: save_dataPrivate.con  save_dataPublic.con  save_dataTradingDay.con
stra/src/: bollin.rs  c25.rs  c25ops.rs  c66.rs  c71.rs  c71inter.rs  cqqq.rs  cstras.rs  econd.rs  f20.rs  filter.rs  lib.rs  macd.rs  p01.rs  p02.rs  p05.rs  para.rs  s19.rs  s3.rs  teststra.rs  version.rs
stra/src/examples/: example1.rs  example10.rs  example2.rs  example3.rs  example4.rs  example5.rs  example6.rs  example7.rs  example8.rs  example9.rs
stra/src/inters/: inter_t.rs  trivol.rs
stra/src/ofs/: of.rs  of30min.rs  ofpro.rs  oftick.rs
stra/src/p03/: dataset.rs  datasetc.rs  mod.rs  model.rs  modelc.rs  p03.rs  run.rs  runc.rs  utils.rs
stra/src/p04/: mod.rs
versions/: RELEASE_0.9.0.md
wasm/: index.html  monitor.js
wasm/app/: code_examples.toml  codemirror-vim.bundle.js  monitor-session-runtime.js  monitor-slot-query-runtime.js  wasm-eval-core.js  wasm-eval-worker.js  wasm-eval.js  workbench-panels.js  workspace-storage.js
wasm/pyodide/: cloudpickle-3.1.1-py3-none-any.whl  pyodide-lock.json
(+577 files in other folders)
