[workspace]
members = [
    "qust-derive",
    "qust-ds",
    "qust",
    "qust-io",
    "qust-api",
    "qust-stra",
]

exclude = [
    "data",
    "notebook",
]

[workspace.dependencies]
lazy_static = "1.4.0"
chrono = { version = "0.4", features = ["serde"] }
serde = { version =  ">= 1.0.136", features = ["derive"] }
serde_json = "1.0.94"
itertools = { version = ">= 0.0.0" }
itertools-num = { version = "0.1.3" }
num-traits = { version = ">= 0.0.0" }
log = { version = "0.4.22" }
typetag = { version = ">= 0.2.5" }
anyhow = { version = "1.0.89" }
tokio = { version = "1.39.3", features = ["full"] }