[package]
name = "qust-derive"
version = "0.1.0"
edition = "2021"
authors = ["baiguo<aruster@qq.com>"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "2.0"
quote = "1.0"
proc-macro2 = "*"
synstructure = "*"

[lib]
proc-macro = true
