[package]
name = "qust-derive"
version = "0.1.5"
edition = "2021"
authors = ["baiguo<aruster@qq.com>"]
description = "a part of crate qust"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 =  "1.0.87"
synstructure = "0.13.1"

[lib]
proc-macro = true
