[package]
name = "qust-ds"
version = "0.1.6"
edition = "2021"
authors = ["baiguo<aruster@qq.com>"]
description = "a part of crate qust"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = { workspace = true}
itertools = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
bincode = { version = ">= 1.3.3" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
tracing-appender = "0.2"
sha2 = { version = "0.10.8" }
hex = { version  = "0.4.3" }
