[package]
name = "qust-io"
version = "0.1.0"
edition = "2021"
authors = ["baiguo<aruster@qq.com>"]
description = "a part of crate qust"
license = "MIT OR Apache-2.0"

[dependencies]
qust = { path = "../qust", version = ">=0.1" }
qust-ds = { path = "../qust-ds", version = ">=0.1"  }
lazy_static = { workspace = true }
serde_json = { workspace = true }
itertools = { workspace = true }
itertools-num = { workspace = true }
chrono = { workspace = true }
num-traits = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
plotters = { version = "^0.3.4", default_features = true, features = ["evcxr", "all_series", "all_elements"] }
csv = { version = ">= 0.0.0" }
ndarray = { version = "0.16.1" }
ndarray-stats = { version = "0.6.0" }
reqwest = { version = "0.12.8", features = ["json"] }
polars = { version = "0.43.1", features = ["serde", "lazy", "fmt", 
    "decompress", "regex", 
    "strings", "list_eval", "rank", "list_to_struct", "dtype-struct",
    "string_pad", "dynamic_group_by","is_first_distinct", "is_last_distinct",
     "is_between", "replace", "cum_agg", "diff", "semi_anti_join", "is_in"
    ]}
polars-lazy = { version = "0.43.1", features = ["moment", "pct_change", "cov", "log", "is_in"]}
polars-core = "0.43.1"
polars-io = "0.43.1"