[package]
name = "qust"
version = "0.1.4"
edition = "2021"
authors = ["baiguo<aruster@qq.com>"]
description = "A crate for finance quantative reserach"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/qust/"
repository = "https://github.com/baiguoname/qust"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
qust-derive = { path = "../qust-derive", version = ">=0.1" }
qust-ds = { path = "../qust-ds", version = ">=0.1" }
chrono = { workspace = true }
itertools = { workspace = true }
num-traits = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
lazy_static = { workspace =  true }
log = { workspace = true }
typetag = { workspace = true }
anyhow = { workspace = true }
bincode = { version = ">= 1.3.3" }
erased-serde = { version = ">= 0.3.24" }
dyn-clone = "1.0.11"
regex = ">=1.10.4"
uuid = { version = "1.10.0", features = ["v4"] }
thiserror = "1.0.63"
once_cell = "1.19.0"