[package]
name = "stra"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
qust = { path = "../qust" }
qust-derive = { path = "../qust-derive" }
qust-ds = { path = "../qust-ds" }
qust-io = { path = "../qust-io" }
qust-api = { path = "../qust-api" }
lazy_static = "1.5.0"
serde = { version =  ">= 1.0.136", features = ["derive"] }
serde_json = "1.0.128"
itertools = { version = "0.13.0" }
typetag = { version = ">= 0.2.5"}
chrono = { version = "0.4.38", features = ["serde"] }
tracing = "*"
rand = "*"
log = "0.4.22"
rayon = "1.10.0"
indicatif = "*"
burn = { version = "0.14.0", features = ["ndarray", "train", "vision"] }
# burn-tch = { version = "0.14.0", features = ["torch"] }
tokio = { workspace = true }